feat: add CORS, get /me
